# playwright_framework

./: .gitignore  README.md  conftest.py  jenkinsfile  pyproject.toml  pytest.ini
.github/sub_agents/: project_explanation_agent.md
data_driven_datasets/: api_payloads.json
fixtures/: api_fixture.py
pages/: base_page.py  home_page.py  wazuko_home_page.py
test/: __init__.py
test/API/: test_github_user.py  test_login_api.py
test/UI/: test_header_menu.py  test_login_ui.py
utils/: api_client.py
