[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wazoku_framework"
version = "0.1.0"
description = "E2E and API Automation Framework utilizing Playwright and HTTPX."
readme = "README.md"
requires-python = ">=3.11"
license = {name = "MIT"}
authors = [
    {name = "anfefudev"}
]

dependencies = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "pytest-base-url>=2.1.0",
    "httpx>=0.27.0",
    "requests>=2.31.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers -p no:warnings"
markers = [
    "ui: marks tests as UI tests (Playwright)",
    "api: marks tests as API tests (HTTPX/Requests)",
    "smoke: marks tests as critical smoke tests"
]