[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wazoku_framework"
version = "0.1.0"
description = "E2E and API Automation Framework utilizing Playwright and HTTPX."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "anfefudev"}
]

dependencies = [
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "iniconfig==2.3.0",
    "packaging==26.2",
    "playwright==1.61.0",
    "pluggy==1.6.0",
    "pyee==13.0.1",
    "pytest==9.1.1",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.8.0",
    "python-slugify==8.0.4",
    "text-unidecode==1.3",
    "typing-extensions==4.16.0",
    "urllib3==2.7.0",
    "django>=5.0",
    "pytest-django>=4.8.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "your_project.settings"  # Replace with your actual settings path
addopts = "-v --strict-markers -p no:warnings"
markers = [
    "ui: marks tests as UI tests (Playwright)",
    "api: marks tests as API tests (HTTPX/Requests)",
    "smoke: marks tests as critical smoke tests"
]